<resources>
    <string name="exchange_size">大小</string>
    <string name="exchange_action_open">打开</string>
    <string name="exchange_action_browse">浏览</string>
    <string name="exchange_action_download">下载</string>
    <string name="exchange_network_break_alert">请确定设备成功联接网络</string>
    <string name="exchange_more">正在加载更多推荐</string>
    <string name="exchange_back_to_top">回到顶部</string>
    <string name="exchange_dowloadOrNot">是否下载推荐应用？</string>
    <string name="munion_all_commodity">全部宝贝</string>
    <string name="munion_my_folder">我的文件夹</string>
    <string name="munion_label_detail_price_title">价格：</string>
    <string name="munion_label_detail_change_label">调整标签</string>
    <string name="munion_label_detail_past_due">宝贝已经过期</string>
    <string name="munion_label_detail_not_past_due">宝贝未过期</string>
    <string name="munion_label_detail_delete">删除</string>
    <string name="munion_label_detail_sync">同步</string>
    <string name="munion_label_detail_sync_start">开始同步</string>
    <string name="munion_label_detail_delete_start">开始删除</string>
    <string name="munion_label_detail_select_all">全选</string>
    <string name="munion_label_detail_select_none">全不选</string>
    <string name="munion_label_detail_sync_already">已同步</string>
    <string name="munion_label_detail_sync_not">未同步</string>
    <string name="munion_label_detail_sync_not_goods">未同步的宝贝</string>
    <string name="munion_label_detail_undo">取消</string>
    <string name="munion_pattern_draw_pattern">请输入手势密码</string>
    <string name="munion_pattern_release_finger">完成后松开手指</string>
    <string name="munion_pattern_least_dots">至少链接4个点,请重试</string>
    <string name="munion_pattern_recored">图案已记录</string>
    <string name="munion_pattern_draw_pattern_confirm">再次输入手势密码确认</string>
    <string name="munion_pattern_retry">重试</string>
    <string name="munion_pattern_continue">继续</string>
    <string name="munion_pattern_cancel">取消</string>
    <string name="munion_pattern_confirm">确认</string>
    <string name="munion_pattern_try_again">两次输入不一致,请再次输入</string>
    <string name="munion_pattern_new_pattern">恭喜你,密码设置成功</string>
    <string name="munion_pattern_wrong_pattern">密码错误,您还可以再输入$次</string>
    <string name="munion_pattern_forgot_pattern">忘记密码</string>
    <string name="munion_pattern_wrong_password_no_changce">密码错误超过最高次数!</string>
    <string name="munion_mymuion_logout">退出当前账号</string>
    <string name="munion_webview_error_common_title">加载失败</string>
    <string name="munion_webview_error_common_subtitle">请检查您的手机是否联网，并重新刷新页面。</string>
    <string name="munion_webview_error_common_refresh_button_text">刷新页面</string>
    <string name="munion_label_list_no_login_title">"您还未登录，
请登陆后查看已同步的宝贝。"</string>
    <string name="munion_label_list_no_login_sub_title">点击右上角的登录按钮，登录您的淘宝账号。</string>
    <string name="munion_label_list_no_not_sync_goods">没有未同步的宝贝</string>
    <string name="munion_label_list_no_sync_goods">没有同步的宝贝</string>
    <string name="munion_error_retry">重试</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_xp_size">大小</string>
    <string name="umeng_xp_action_open">打开</string>
    <string name="umeng_xp_action_browse">浏览</string>
    <string name="umeng_xp_action_download">下载</string>
    <string name="umeng_xp_action_call">拨打</string>
    <string name="umeng_xp_more">更多精彩推荐</string>
    <string name="umeng_xp_back_to_top">回到顶部</string>
    <string name="umeng_xp_back">返回</string>
    <string name="umeng_xp_dowloadOrNot">是否下载推荐应用？</string>
    <string name="umeng_xp_title_info">精彩推荐</string>
    <string name="umeng_xp_dowload_dialog_dinfo">马上下载</string>
    <string name="umeng_xp_dowload_dialog_cinfo">马上拨打</string>
    <string name="umeng_xp_failed_loading">加载失败...</string>
    <string name="umeng_xp_no_browser_tips">请先安装浏览器..</string>
    <string name="umeng_xp_tip_download_pre">开始下载</string>
    <string name="umeng_xp_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_xp_info_banner_deprecated">当前SDK版本不支持Banner样式,请联系客服.</string>
    <string name="umeng_xp_more_content">更多</string>
    <string name="umeng_xp_pickup">收起</string>
    <string name="app_id_tts">5294142e</string>
    <string name="app_name">必读名著60部</string>
    <string name="showinfo">云端书库</string>
    <string name="edit">编辑</string>
    <string name="help">帮助</string>
    <string name="mybookstore">我的书库</string>
    <string name="local">本地</string>
    <string name="oprate">操作</string>
    <string name="delete">删除</string>
    <string name="move">移动</string>
    <string name="done">完成</string>
    <string name="btnReturn">返回</string>
    <string name="DeleteBookTitle">删除确认</string>
    <string name="DeleteBookDesc">你确定要删除书：%s ?</string>
    <string name="DeleteDownlist">你确定要停止并且删除所有下载任务?</string>
    <string name="DeleteBookALL">你确定要删除所有书籍</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_syn_localbooks">同步本地书籍</string>
    <string name="str_online_bookstore">在线书库列表</string>
    <string name="str_current_version">当前版本：</string>
    <string name="str_bug_report">问题反馈：</string>
    <string name="str_recommended_apps">推荐列表</string>
    <string name="str_back">返回</string>
    <string name="chapter">目录</string>
    <string name="daytit">白天</string>
    <string name="nighttit">夜晚</string>
    <string name="set">设置</string>
    <string name="mark">书签</string>
    <string name="shelf">书架</string>
    <string name="textshow">我看到一棵勇敢的仙人掌，打败了死亡。虽然被冬日的雪所覆盖，但它仍然努力的生长出来，沐浴在黄金的阳光下。大自然正从冬天的伤口复原，这个春天就是证明。每年她都答应要回来，但今年她却迟到那么久，几乎让我们绝望了。可既然春天已经来了，我们就可以原谅这个小气的神了。</string>
    <string name="daytheme">白天</string>
    <string name="nighttheme">夜晚</string>
    <string name="fontstyle">字体</string>
    <string name="fontsize">字号</string>
    <string name="fontblod">加粗</string>
    <string name="reset">初始化所有设置</string>
    <string name="pageeffect_str">翻页方式</string>
    <string name="pageeffect_justwebview">自由滑动</string>
    <string name="pageeffect_3d">3D翻页</string>
    <string name="reading_page_padding">页边距</string>
    <string name="reading_page_linespace">行间距</string>
    <string name="simpleorTraditional_str">内容繁简</string>
    <string name="warn">提示</string>
    <string name="question">确定要退出吗？</string>
    <string name="resetques">您确定要初始化所有设置吗？</string>
    <string name="emptyques">您确定要清空阅读进度吗？</string>
    <string name="empty">清空阅读进度</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="error">错误</string>
    <string name="notsd">请扩展你手机的外部存储，才能流畅的使用！</string>
    <string name="nobookinsheft">"书架上没有书！ 
请您点击左上角的“云端书库”下载 

"</string>
    <string name="nobookinfolder">"此分类下没有书！ 
请按返回键，长安书籍添加到此分类

"</string>
    <string name="loading">等待</string>
    <string name="loadinfo">正在读取，请稍候...</string>
    <string name="loadloacalinfo">正在扫描，请稍候...</string>
    <string name="ziploadinfo">正在为第一次读取做准备，请耐心等待...</string>
    <string name="load">正在读取</string>
    <string name="Standard">标准</string>
    <string name="soft">柔和</string>
    <string name="old">怀旧</string>
    <string name="redsand">红沙</string>
    <string name="geek">极客</string>
    <string name="lightyellow">淡黄</string>
    <string name="skyblue">天蓝</string>
    <string name="caodi">草地</string>
    <string name="redbrown">红棕</string>
    <string name="night">夜晚</string>
    <string name="stars">星空</string>
    <string name="dayNew1">清新</string>
    <string name="dayNew2">清新2</string>
    <string name="dayNew3">复古</string>
    <string name="daynightNew1">复古黄</string>
    <string name="daynightNew2">音乐蓝</string>
    <string name="nightNew1">木纹</string>
    <string name="nightNew2">深棕</string>
    <string name="nightNew3">牛仔蓝</string>
    <string name="nightNew4">深蓝</string>
    <string name="nightNew5">深灰</string>
    <string name="nightNew6">传奇棕</string>
    <string name="bg01">白天20</string>
    <string name="bg02">白天21</string>
    <string name="bg03">白天22</string>
    <string name="bg04">白天23</string>
    <string name="bg05">白天24</string>
    <string name="bg06">黑夜20</string>
    <string name="bg07">黑夜21</string>
    <string name="bg08">黑夜22</string>
    <string name="bg09">黑夜23</string>
    <string name="bg10">黑夜24</string>
    <string name="add">添加</string>
    <string name="showprogress">当前进度</string>
    <string name="emptypro">清除进度</string>
    <string name="comeback">我的书库</string>
    <string name="gotobookstore">正在加载，请稍候...</string>
    <string name="bookisexist">"警告：
该书在你的SDCard里已经存在,是否要覆盖该文件？"</string>
    <string name="downprogress">下载队列</string>
    <string name="cleanup_downloadlist">清空下载</string>
    <string name="downloadlist">下载列表</string>
    <string name="icloudbookstore">云端书库</string>
    <string name="keywordsSearchResultTitle">搜索结果</string>
    <string name="hotkeywordsprompt">热门关键词：</string>
    <string name="searchbooks">搜索</string>
    <string name="hint_searchbooks">输入书名、作者关键字</string>
    <string name="loginTitle">登陆云端书库</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="login">登录</string>
    <string name="relogin">重登录</string>
    <string name="requestdata">请求数据中...</string>
    <string name="requestdatafinish">请求数据完成</string>
    <string name="requestdatafinishNoData">没有数据返回</string>
    <string name="emptyList">没有数据...</string>
    <string name="downloadListTitle">下载列表</string>
    <string name="returnning">正在返回</string>
    <string name="tab_menu_allbooks">所有书籍</string>
    <string name="tab_menu_recommended">推荐书籍</string>
    <string name="tab_menu_bookcategory">书籍分类</string>
    <string name="tab_menu_search">搜索</string>
    <string name="tab_menu_cloudbookstore">我的书库</string>
    <string name="bookstore_search_hint">输入书籍关键字</string>
    <string name="bookshelf_loading_txt">载入书籍···</string>
    <string name="bookstore_loading_txt">加载数据···</string>
    <string name="bookstore_loading_comment">加载评论···</string>
    <string name="refresh_comment">刷新</string>
    <string name="write_comment">撰写评论</string>
    <string name="bookstore_empty_txt">没有数据或者获取数据失败，请重试！</string>
    <string name="bookcomment_empty_txt">此书暂时没有评论，或者获取评论异常!</string>
    <string name="comment_label">书籍评论</string>
    <string name="comment_hint">输入评论</string>
    <string name="submit_comment">提交</string>
    <string name="cancle_comment">取消</string>
    <string name="msg_commenting">提交评论...</string>
    <string name="msg_comment_success">评论成功</string>
    <string name="msg_comment_failed">评论失败</string>
    <string name="choose_share_method">选择分享方式</string>
    <string name="choose_share_method_book">分享此书</string>
    <string name="choose_share_method_currentpage">分享当前页</string>
    <string name="sort_msg_by_bookname">正在按书名排序...</string>
    <string name="sort_msg_by_downloadtime">正在按下载时间排序...</string>
    <string name="sort_msg_by_lastreading">正在按最后阅读排序...</string>
    <string name="sort_msg_by_default">正在排序...</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中.....</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
</resources>