<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RatingBar android:id="@id/ratingBar_comment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="5" android:rating="3.0" android:stepSize="1.0" android:isIndicator="false" android:layout_alignParentTop="true" style="@style/bookRatingBar" />
    <EditText android:id="@id/editText_commentcontent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="" android:hint="@string/comment_hint" android:lines="3" android:minLines="3" android:layout_below="@id/ratingBar_comment" android:layout_centerInParent="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/llbuttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/editText_commentcontent" android:layout_centerInParent="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:id="@id/button_rating_comment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit_comment" />
        <Button android:id="@id/button_rating_cancel" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/cancle_comment" />
    </LinearLayout>
</RelativeLayout>
