<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/height_topmenubar">
        <RelativeLayout android:paddingLeft="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@color/common_blue" android:id="@id/tv_currentversioncode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_current_version" />
            <TextView android:textSize="17.0sp" android:textColor="@color/common_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/tv_currentversioncode" />
        </RelativeLayout>
        <RelativeLayout android:paddingLeft="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@color/common_blue" android:id="@id/tv_currentversioncode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_bug_report" />
            <TextView android:textSize="17.0sp" android:textColor="@color/common_blue" android:id="@id/bug_report_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" " android:layout_toRightOf="@id/tv_currentversioncode" />
        </RelativeLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="40.0dip">
            <WebView android:id="@id/webview_aboutus" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <WebView android:id="@id/webview_rating" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <RelativeLayout android:gravity="center" android:layout_gravity="center" android:id="@id/aboutus_loading" android:background="#ffffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <ProgressBar android:layout_gravity="center" android:id="@id/cloudstoreprogressbar" android:padding="5.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" style="@style/customerProgress" />
                    <TextView android:textSize="17.0sp" android:textColor="@color/common_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bookstore_loading_txt" android:layout_toRightOf="@id/cloudstoreprogressbar" android:layout_centerVertical="true" />
                </RelativeLayout>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/menu_top" android:background="#ff1c82ac" android:layout_width="fill_parent" android:layout_height="@dimen/height_topmenubar" android:layout_alignParentTop="true">
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/btn_close" android:background="@drawable/buttonbg_common" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/icon_back" android:scaleType="centerInside" android:layout_weight="5.0" />
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/titleshow" android:paddingLeft="-10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/str_about_us" android:singleLine="true" android:layout_weight="1.0" android:layout_centerInParent="true" />
    </LinearLayout>
    <ImageView android:layout_gravity="top" android:id="@id/imageview_topshadow" android:layout_width="fill_parent" android:layout_height="12.0px" android:layout_marginTop="@dimen/height_topmenubar" android:src="@drawable/topmenu_shadow_x" android:scaleType="fitXY" android:layout_below="@id/menu_top" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:background="@color/common_blue" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:id="@id/button_rating" android:background="@drawable/buttonbg_common" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="软件评分" android:layout_centerInParent="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:id="@id/button_recommendtofriend" android:background="@drawable/buttonbg_common" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="推荐给朋友" android:layout_centerInParent="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
